# sso_jarvis_automation

./: .gitignore  README.md  complete_analysis.json  example.env  extracted_data.csv  jarvis.py  main.py  oracle_sso_session.json  pyproject.toml
