[project]
name = "sso-jarvis-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "dotenv>=0.9.9",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-core>=0.3.67",
    "oci>=2.155.0",
    "pandas>=2.3.0",
    "playwright>=1.53.0",
    "requests>=2.32.4",
    "ruff>=0.12.1",
]
